--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ python:
   - "2.6"
   - "pypy"
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq iverilog
 
-# command to run tests, e.g. python setup.py test
+install: 
+  - pip install -r requirements.txt
+
 script: python setup.py test
