--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,12 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq iverilog
 
-install: 
+install:
   - pip install -r requirements.txt
 
 script: python setup.py test
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
