--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 install:
   - pip install -r requirements.txt
 
-script: python setup.py test
+script: py.test
 
 notifications:
   email:
