--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/jandecaluwe/myhdl.git#egg=myhdl
+git+https://github.com/jck/myhdl.git
 clint==0.3.1
 docopt==0.6.1
 decorator==3.4.0
