--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/jck/myhdl.git@packaging
+git+https://github.com/jandecaluwe/myhdl.git
 clint==0.3.1
 docopt==0.6.1
-decorator==3.4.0
+wrapt
