--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,6 @@
 [tox]
-envlist = py26, py27, py33
+envlist = py27, py34
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/uhdl
-commands = python setup.py test
-deps =
-    -r{toxinidir}/requirements.txt
+deps = -rrequirements.txt
+commands = py.test []
