tox: docs, livedocs testenvs

--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,14 @@ envlist = py27, py34
 [testenv]
 deps = -rrequirements.txt
 commands = py.test --basetemp={envtmpdir} []
+
+[testenv:docs]
+whitelist_externals = make
+deps = -rdocs/requirements.txt
+commands = make -C docs html
+
+[testenv:livedocs]
+whitelist_externals = make
+deps = -rdocs/requirements.txt
+       sphinx-autobuild 
+commands = make -C docs livehtml
