--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,6 @@ commands = py.test --basetemp={envtmpdir} []
 
 [testenv:docs]
 whitelist_externals = make
-deps = -rdocs/requirements.txt
-commands = make -C docs html
-
-[testenv:livedocs]
-whitelist_externals = make
-deps = -rdocs/requirements.txt
-       sphinx-autobuild 
-commands = make -C docs livehtml
+changedir = doc
+deps = sphinx-autobuild
+commands = make []
