--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,16 @@
 *.py[cod]
 
-# C extensions
-*.so
-
 # Packages
 *.egg
 *.egg-info
-dist
-build
+dist/
+build/
 eggs
 parts
 bin
 var
 sdist
 develop-eggs
-.installed.cfg
-lib
-lib64
 
 # Installer logs
 pip-log.txt
@@ -25,18 +19,6 @@ pip-log.txt
 .coverage
 .tox
 .hypothesis
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# Complexity
-output/*.html
-output/*/index.html
 
 # Sphinx
 docs/_build
